src/objects/LQ_Opportunity__x.object
<CustomObject>
    <fields>
        <fullName>Early_Engagement_c__c</fullName>
        <externalDeveloperName>Early_Engagement__c</externalDeveloperName>
        <label>Early Engagement</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emerging_BioPharma_c__c</fullName>
        <externalDeveloperName>Emerging_BioPharma__c</externalDeveloperName>
        <label>zzEmerging BioPharma</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Lead_c__c</fullName>
        <externalDeveloperName>Engagement_Lead__c</externalDeveloperName>
        <label>Engagement Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Rate_c__c</fullName>
        <externalDeveloperName>Enrollment_Rate__c</externalDeveloperName>
        <label>Enrollment Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_c__c</fullName>
        <externalDeveloperName>Executive_Sponsor__c</externalDeveloperName>
        <label>Executive Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expect_ATP_or_WO_in_Awarded_Qtr_c__c</fullName>
        <externalDeveloperName>Expect_ATP_or_WO_in_Awarded_Qtr__c</externalDeveloperName>
        <label>Expect ATP or WO in Awarded Qtr?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Likely</fullName>
                </value>
                <value>
                    <fullName>Somewhat Likely</fullName>
                </value>
                <value>
                    <fullName>Not Likely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <externalDeveloperName>ExpectedRevenue</externalDeveloperName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Margin_Products_c__c</fullName>
        <externalDeveloperName>Expected_Margin_Products__c</externalDeveloperName>
        <label>zzExpected Margin Products</label>
        <precision>5</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Margin_c__c</fullName>
        <externalDeveloperName>Expected_Margin__c</externalDeveloperName>
        <label>Expected Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Product_Training_Start_Date_c__c</fullName>
        <externalDeveloperName>Expected_Product_Training_Start_Date__c</externalDeveloperName>
        <label>Expected Product - Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Project_End_Date_c__c</fullName>
        <externalDeveloperName>Expected_Project_End_Date__c</externalDeveloperName>
        <label>Expected Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Start_Date_c__c</fullName>
        <externalDeveloperName>Expected_Project_Start_Date__c</externalDeveloperName>
        <label>Expected Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Verbally_Agreed_Date_c__c</fullName>
        <externalDeveloperName>Expected_Verbally_Agreed_Date__c</externalDeveloperName>
        <label>zz?Expected Verbally Agreed Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_to_move_to_Dev_c__c</fullName>
        <externalDeveloperName>Expected_to_move_to_Dev__c</externalDeveloperName>
        <label>Expected to move to Development Prospect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 2016</fullName>
                </value>
                <value>
                    <fullName>Q2 2016</fullName>
                </value>
                <value>
                    <fullName>Q3 2016</fullName>
                </value>
                <value>
                    <fullName>Q4 2016</fullName>
                </value>
                <value>
                    <fullName>Q1 2017</fullName>
                </value>
                <value>
                    <fullName>Q2 2017</fullName>
                </value>
                <value>
                    <fullName>Q3 2017</fullName>
                </value>
                <value>
                    <fullName>Q4 2017</fullName>
                </value>
                <value>
                    <fullName>Q1 2018</fullName>
                </value>
                <value>
                    <fullName>Q2 2018</fullName>
                </value>
                <value>
                    <fullName>Q3 2018</fullName>
                </value>
                <value>
                    <fullName>Q4 2018</fullName>
                </value>
                <value>
                    <fullName>Q1 2019</fullName>
                </value>
                <value>
                    <fullName>Q2 2019</fullName>
                </value>
                <value>
                    <fullName>Q3 2019</fullName>
                </value>
                <value>
                    <fullName>Q4 2019</fullName>
                </value>
                <value>
                    <fullName>Q1 2020</fullName>
                </value>
                <value>
                    <fullName>Q2 2020</fullName>
                </value>
                <value>
                    <fullName>Q3 2020</fullName>
                </value>
                <value>
                    <fullName>Q4 2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expenses_c__c</fullName>
        <externalDeveloperName>Expenses__c</externalDeveloperName>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exploratory_Predictive_Biomarker_Testing__c</fullName>
        <externalDeveloperName>Exploratory_Predictive_Biomarker_Testing__c</externalDeveloperName>
        <label>Exploratory Predictive Biomarker Testing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exposure_c__c</fullName>
        <externalDeveloperName>Exposure__c</externalDeveloperName>
        <label>Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No specific product under study (e.g. disease registry)</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Non-biological medicinal product</fullName>
                </value>
                <value>
                    <fullName>Non-biological medicinal product/device combination</fullName>
                </value>
                <value>
                    <fullName>Biological medicinal product</fullName>
                </value>
                <value>
                    <fullName>Biological medicinal product/device combination</fullName>
                </value>
                <value>
                    <fullName>Surgical procedure</fullName>
                </value>
                <value>
                    <fullName>Vaccine</fullName>
                </value>
                <value>
                    <fullName>Diagnostic test</fullName>
                </value>
                <value>
                    <fullName>Consumer health including nutrition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Continuation_Part_of_Progam_c__c</fullName>
        <externalDeveloperName>Extension_Continuation_Part_of_Progam__c</externalDeveloperName>
        <label>Extension/Continuation/Part of Progam</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Part of Progam</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSP_Function_c__c</fullName>
        <externalDeveloperName>FSP_Function__c</externalDeveloperName>
        <label>FSP Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>MW</fullName>
                </value>
                <value>
                    <fullName>PhV</fullName>
                </value>
                <value>
                    <fullName>Site Start-up</fullName>
                </value>
                <value>
                    <fullName>Feasibility</fullName>
                </value>
                <value>
                    <fullName>Commercial Services</fullName>
                </value>
                <value>
                    <fullName>LSFR (Clinical Monitoring)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>Ph I</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>MPM</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSP_Other_Function_c__c</fullName>
        <externalDeveloperName>FSP_Other_Function__c</externalDeveloperName>
        <label>FSP Other Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSP_or_Staffing_c__c</fullName>
        <externalDeveloperName>FSP_or_Staffing__c</externalDeveloperName>
        <label>FSP or Staffing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FSP</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_BD_transfer_c__c</fullName>
        <externalDeveloperName>Field_BD_transfer__c</externalDeveloperName>
        <label>Field BD transfer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Check_c__c</fullName>
        <externalDeveloperName>Financial_Check__c</externalDeveloperName>
        <label>Financial Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Patient_Entered_Date_c__c</fullName>
        <externalDeveloperName>First_Patient_Entered_Date__c</externalDeveloperName>
        <label>First Patient Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FiscalQuarter__c</fullName>
        <externalDeveloperName>FiscalQuarter</externalDeveloperName>
        <label>Fiscal Quarter</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <externalDeveloperName>FiscalYear</externalDeveloperName>
        <label>Fiscal Year</label>
        <precision>8</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal__c</fullName>
        <externalDeveloperName>Fiscal</externalDeveloperName>
        <label>Fiscal Period</label>
        <length>6</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fix_Summary_Fields_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Fix_Summary_Fields__c</externalDeveloperName>
        <label>Fix Summary Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Months_c__c</fullName>
        <externalDeveloperName>Follow_up_Months__c</externalDeveloperName>
        <label>Follow-up Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>For_primary_data_collection_will_study_c__c</fullName>
        <externalDeveloperName>For_primary_data_collection_will_study__c</externalDeveloperName>
        <label>Will this study:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Involve few than 1,000 sites</fullName>
                </value>
                <value>
                    <fullName>Enroll fewer than 10,000 subjects</fullName>
                </value>
                <value>
                    <fullName>Yes to both</fullName>
                </value>
                <value>
                    <fullName>No to either or both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <externalDeveloperName>ForecastCategory</externalDeveloperName>
        <label>Forecast Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>BestCase</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Comments_c__c</fullName>
        <externalDeveloperName>Forecast_Comments__c</externalDeveloperName>
        <label>Advance Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Presentation_Date_c__c</fullName>
        <externalDeveloperName>Formula_Presentation_Date__c</externalDeveloperName>
        <label>Formula Presentation Date</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formulation_c__c</fullName>
        <externalDeveloperName>Formulation__c</externalDeveloperName>
        <label>zz?Formulation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerosol</fullName>
                </value>
                <value>
                    <fullName>Blood Product</fullName>
                </value>
                <value>
                    <fullName>Capsule</fullName>
                </value>
                <value>
                    <fullName>Eye Drop</fullName>
                </value>
                <value>
                    <fullName>Granule</fullName>
                </value>
                <value>
                    <fullName>Injection</fullName>
                </value>
                <value>
                    <fullName>Nasal Drop</fullName>
                </value>
                <value>
                    <fullName>Ointment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
                <value>
                    <fullName>Powder/Pulvis</fullName>
                </value>
                <value>
                    <fullName>Suppository</fullName>
                </value>
                <value>
                    <fullName>Syrup</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Troche</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vaccine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Franklin_Covey_SPI_tool_used_and_att_c__c</fullName>
        <externalDeveloperName>Franklin_Covey_SPI_tool_used_and_att__c</externalDeveloperName>
        <label>Franklin Covey SPI tool used &amp; attached</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Source_c__c</fullName>
        <externalDeveloperName>Funding_Source__c</externalDeveloperName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Government</fullName>
                </value>
                <value>
                    <fullName>Ex U.S. Government</fullName>
                </value>
                <value>
                    <fullName>Non-Profit- Product Development Partner (PDP)</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GFL_Comments_c__c</fullName>
        <externalDeveloperName>GFL_Comments__c</externalDeveloperName>
        <label>GFL Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GPM_to_be_located_in_specific_region_c__c</fullName>
        <externalDeveloperName>GPM_to_be_located_in_specific_region__c</externalDeveloperName>
        <label>GPM to be located in specific region?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSK_Competitive_Bid_c__c</fullName>
        <externalDeveloperName>GSK_Competitive_Bid__c</externalDeveloperName>
        <label>GSK Competitive Bid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Expansion_c__c</fullName>
        <externalDeveloperName>Geographic_Expansion__c</externalDeveloperName>
        <label>Geographic Expansion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographical_Comments_c__c</fullName>
        <externalDeveloperName>Geographical_Comments__c</externalDeveloperName>
        <label>Geographical Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_BD_Involvement_c__c</fullName>
        <externalDeveloperName>Global_BD_Involvement__c</externalDeveloperName>
        <label>zz?Global BD Involvement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jo Wales</fullName>
                </value>
                <value>
                    <fullName>Gavin Jones</fullName>
                </value>
                <value>
                    <fullName>Geoff Barnett</fullName>
                </value>
                <value>
                    <fullName>Ty Hughes</fullName>
                </value>
                <value>
                    <fullName>Mark Forbes-Irving</fullName>
                </value>
                <value>
                    <fullName>Adrian Payne</fullName>
                </value>
                <value>
                    <fullName>Adrian Yates</fullName>
                </value>
                <value>
                    <fullName>Akira Sone</fullName>
                </value>
                <value>
                    <fullName>Andrea Kuschel-Barthel</fullName>
                </value>
                <value>
                    <fullName>Andreas Werner</fullName>
                </value>
                <value>
                    <fullName>Angela Lanzisera</fullName>
                </value>
                <value>
                    <fullName>An Jeurissen</fullName>
                </value>
                <value>
                    <fullName>Art Marchesini</fullName>
                </value>
                <value>
                    <fullName>Bart Brownell</fullName>
                </value>
                <value>
                    <fullName>Ben Cons</fullName>
                </value>
                <value>
                    <fullName>Brion Brandes</fullName>
                </value>
                <value>
                    <fullName>Charlotte Carey</fullName>
                </value>
                <value>
                    <fullName>Christel Jancik</fullName>
                </value>
                <value>
                    <fullName>Christine Cole</fullName>
                </value>
                <value>
                    <fullName>Claudio Cauzillo</fullName>
                </value>
                <value>
                    <fullName>Daniela Palazzolo</fullName>
                </value>
                <value>
                    <fullName>Dan Woodward</fullName>
                </value>
                <value>
                    <fullName>Dan Yarnell</fullName>
                </value>
                <value>
                    <fullName>Daryl Gaugler</fullName>
                </value>
                <value>
                    <fullName>Dawn Marie Yardis</fullName>
                </value>
                <value>
                    <fullName>Denis Ormesher</fullName>
                </value>
                <value>
                    <fullName>Donna Cullan</fullName>
                </value>
                <value>
                    <fullName>Erich Sütterlin</fullName>
                </value>
                <value>
                    <fullName>Erin Harrigan</fullName>
                </value>
                <value>
                    <fullName>Evangelos Tryfonidis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Site_ID_Launch_c__c</fullName>
        <externalDeveloperName>Global_Site_ID_Launch__c</externalDeveloperName>
        <label>Global Site ID Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Status_c__c</fullName>
        <externalDeveloperName>Grant_Application_Status__c</externalDeveloperName>
        <label>Grant Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Decision pending</fullName>
                </value>
                <value>
                    <fullName>Resubmission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Timing_Target_Grant_App_Timing_c__c</fullName>
        <externalDeveloperName>Grant_Timing_Target_Grant_App_Timing__c</externalDeveloperName>
        <label>Grant Timing (Target Grant App Timing)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HQ_Country_c__c</fullName>
        <externalDeveloperName>HQ_Country__c</externalDeveloperName>
        <label>HQ Country</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HQ_Location_c__c</fullName>
        <externalDeveloperName>HQ_Location__c</externalDeveloperName>
        <label>HQ Location</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HasOpenActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpenActivity</externalDeveloperName>
        <label>Has Open Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOpportunityLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOpportunityLineItem</externalDeveloperName>
        <label>Has Line Item</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOverdueTask__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>HasOverdueTask</externalDeveloperName>
        <label>Has Overdue Task</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_Kits_been_Shipped_c__c</fullName>
        <externalDeveloperName>Have_Kits_been_Shipped__c</externalDeveloperName>
        <label>zz?Have Kits been Shipped?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_c__c</fullName>
        <externalDeveloperName>Hours__c</externalDeveloperName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hybrid_Source_Detail_c__c</fullName>
        <externalDeveloperName>Hybrid_Source_Detail__c</externalDeveloperName>
        <label>Research Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research site-based</fullName>
                </value>
                <value>
                    <fullName>Real-world site-based</fullName>
                </value>
                <value>
                    <fullName>Non-site-based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMS_Budget_Holder_Email_c__c</fullName>
        <externalDeveloperName>IMS_Budget_Holder_Email__c</externalDeveloperName>
        <label>IMS Budget Holder Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Budget_Holder_Name_c__c</fullName>
        <externalDeveloperName>IMS_Budget_Holder_Name__c</externalDeveloperName>
        <label>IMS Budget Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Budget_Holder_Phone_c__c</fullName>
        <externalDeveloperName>IMS_Budget_Holder_Phone__c</externalDeveloperName>
        <label>IMS Budget Holder Phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Main_Decision_Maker_Email_c__c</fullName>
        <externalDeveloperName>IMS_Main_Decision_Maker_Email__c</externalDeveloperName>
        <label>IMS Main Decision Maker Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Main_Decision_Maker_Name_c__c</fullName>
        <externalDeveloperName>IMS_Main_Decision_Maker_Name__c</externalDeveloperName>
        <label>IMS Main Decision Maker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Main_Decision_Maker_Phone_c__c</fullName>
        <externalDeveloperName>IMS_Main_Decision_Maker_Phone__c</externalDeveloperName>
        <label>IMS Main Decision Maker Phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Opportunity_Currency_c__c</fullName>
        <externalDeveloperName>IMS_Opportunity_Currency__c</externalDeveloperName>
        <label>IMS Opportunity Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Opportunity_Number_c__c</fullName>
        <externalDeveloperName>IMS_Opportunity_Number__c</externalDeveloperName>
        <label>IMS Opportunity Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Opportunity_Owner_c__c</fullName>
        <externalDeveloperName>IMS_Opportunity_Owner__c</externalDeveloperName>
        <label>IMS Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Opportunity_Sharing_Status_c__c</fullName>
        <externalDeveloperName>IMS_Opportunity_Sharing_Status__c</externalDeveloperName>
        <label>IMS Opportunity Sharing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Sharing Initiated</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>